Add mailer handler

--- a/mail-service/templates/mail.html.gohtml
+++ b/mail-service/templates/mail.html.gohtml
@@ -4,10 +4,11 @@
     <head>
         <meta name="viewport" content="width=device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title></title>
+        <title>{{.name}}</title>
     </head>
 
     <body>
+        <h2>Hi {{.name}}</h2>
         <p>{{.message}}</p>
     </body>
 </html>
